--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: My Project [Daily Progress]
-author: Hadi Vafaii
+author: Govinda Surampudi
 logo: logo_sepia.png
 exclude_patterns : ['_tag', '_reset_cell_id', '**.ipynb_checkpoints']
 only_build_toc_files: false
@@ -22,7 +22,7 @@ execute:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/hadivafaii/MyProject  # Online location of your book
+  url: https://github.com/govinda-umd/explainable-ai  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: master  # Which branch of the repository should be used when creating links (optional)
 
