--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Govinda added
-data/
+#data/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks
